@@ -45,6 +45,8 @@ namespace ttHMultilepton {
     float lepSFTTVA;
     float lepSFObjLoose[MAXSYST];
     float lepSFObjTight[MAXSYST];
+    float tauSFTight[MAXSYST];
+    float tauSFLoose[MAXSYST];
     void BootstrapTree(std::shared_ptr<top::TreeManager> tree, const ttHMultileptonLooseEventSaver* ntupler);
     void Clear() { memset(this, 0, sizeof(Variables)); }
   };
